# TBS

./: .dockerignore  .env.example  .gitignore  BACKEND_V2_REDESIGN.md  Dockerfile  Dockerfile.backend  Dockerfile.worker.paddle  Dockerfile.worker.yolo  PROJECT_ANALYSIS.md  README.md  alembic.ini  index.html  pyproject.toml  requirements.txt  setup.py  思路以及规划.md
docker/: entrypoint.sh
docs/: 00_概述.md  01_项目管理.md  02_数据集管理.md  03_训练任务.md  04_模型版本.md  05_模型部署.md  06_推理服务.md  07_在线服务.md  08_数据集转换与增强.md  09_模型转换.md  10_系统监控与告警.md  11_辅助接口.md  alarms_api.md  datasets_api.md  framework_plugins_api.md  paddle_local_dev.md
docs/ai-kb/: 04-runtime-workflows.md  90-pitfalls.md
requirements/: backend.txt  build.txt  worker.common.txt  worker.paddle.local.txt  worker.paddle.txt  worker.txt  worker.yolo.txt
scripts/: migrate_illegal_versions_to_cas.py
tests/: test_dataset_annotations.py  test_illegal_dataset_mounted_publish.py  test_illegal_dataset_publish_idempotency.py  test_standard_dataset_lightweight_list.py  test_training_params.py
train_platform/: __init__.py  app.py  verify_coco.py
train_platform/api/: deps.py
train_platform/api/v2/: __init__.py  alarms.py  architectures.py  chart_configs.py  dataset_augmentations.py  dataset_conversions.py  datasets.py  deployment_runs.py  deployments.py  frameworks.py  inference.py  inference_jobs.py  model_conversions.py  model_versions.py  pretrain_models.py  projects.py  serving.py  stats.py  system_metrics.py  thumbnails.py  training_runs.py
train_platform/api/v3/: __init__.py  alarms.py  architectures.py  chart_configs.py  dataset_augmentations.py  dataset_conversions.py  dataset_imports.py  dataset_upload_tasks.py  datasets.py  deployment_runs.py  deployments.py  frameworks.py  illegal_datasets.py  inference.py  inference_jobs.py  model_conversions.py  model_versions.py  pretrain_models.py  projects.py  qualified_models.py  serving.py  standard_datasets.py  stats.py  system_metrics.py  thumbnails.py  training_reports.py  training_runs.py
train_platform/core/: __init__.py  build_protected_runtime.py  config.py  license.py
train_platform/db/: __init__.py  init_db.py  seed_data.py  session.py
train_platform/db/migrations/: env.py
train_platform/models/: __init__.py  alarm.py  architecture.py  chart_config.py  dataset.py  dataset_event.py  dataset_image.py  deployment.py  deployment_run.py  enums.py  inference.py  model_registry.py  project.py  training_run.py  training_run_meta.py
train_platform/models/v3/: __init__.py  alarm.py  architecture.py  base.py  chart_config.py  dataset.py  dataset_event.py  dataset_image.py  dataset_upload.py  deployment.py  deployment_run.py  enums.py  illegal_dataset.py  inference.py  model_registry.py  project.py  qualified_model.py  standard_dataset.py  training_run.py  training_run_meta.py
train_platform/repositories/: __init__.py  architecture_repo.py  base.py  dataset_event_repo.py  dataset_repo.py  dataset_version_repo.py  deployment_repo.py  model_version_repo.py  project_repo.py  training_run_meta_repo.py  training_run_repo.py
train_platform/repositories/v3/: __init__.py  architecture_repo.py  base.py  dataset_event_repo.py  dataset_repo.py  dataset_version_repo.py  deployment_repo.py  illegal_dataset_repo.py  illegal_dataset_version_repo.py  model_version_repo.py  project_repo.py  qualified_model_repo.py  standard_dataset_repo.py  training_run_meta_repo.py  training_run_repo.py
train_platform/schemas/: __init__.py
train_platform/schemas/v2/: alarms.py  architectures.py  dataset_augmentations.py  dataset_conversions.py  datasets.py  deployments.py  frameworks.py  inference.py  inference_jobs.py  model_conversions.py  model_versions.py  pretrain_models.py  projects.py  stats.py  training_runs.py
train_platform/schemas/v3/: alarms.py  architectures.py  common.py  dataset_augmentations.py  dataset_imports.py  dataset_uploads.py  datasets.py  deployments.py  frameworks.py  illegal_datasets.py  inference.py  inference_jobs.py  model_conversions.py  model_versions.py  pretrain_models.py  projects.py  qualified_models.py  standard_datasets.py  stats.py  system_metrics.py  training_reports.py  training_runs.py
train_platform/services/: alarm_service.py  architecture_service.py  dataset_augmentation_service.py  dataset_conversion_service.py  dataset_illegal_convert_service.py  dataset_service.py  dataset_upload_service.py  deployment_adapters.py  deployment_runtime_service.py  deployment_service.py  file_service.py  inference_job_service.py  inference_service.py  model_version_service.py  project_service.py  system_metrics_service.py  thumbnail_service.py  training_run_service.py  usage_limit_service.py
train_platform/services/v3/: alarm_service.py  architecture_service.py  dataset_augmentation_service.py  dataset_common.py  dataset_conversion_service.py  dataset_illegal_convert_service.py  dataset_import_service.py  dataset_service.py  dataset_upload_service.py  deployment_adapters.py  deployment_runtime_service.py  deployment_service.py  file_service.py  framework_service.py  illegal_dataset_cas.py  illegal_dataset_publish_job_service.py  illegal_dataset_publish_service.py  illegal_dataset_service.py  (+11 more)
train_platform/tests/: test_alarm_service.py  test_architecture_shielding.py  test_dataset_augmentation.py  test_deployment_rollback.py  test_deployment_runtime.py  test_inference_hardening.py  test_metrics_pipeline.py  test_project_compare_baseline.py  test_seed_architectures.py  test_training_run_compare_framework.py  test_ultralytics_yolo_plugin.py
train_platform/training/: __init__.py  registry.py
train_platform/utils/: dataset_yaml_utils.py  exceptions.py  image_exts.py  mlflow_utils.py  model_conversion_jobs.py  path_utils.py  training_artifacts.py  training_augmentations.py  training_loss_weights.py  training_params.py  training_report_docx.py  zip_encoding.py
train_platform/workers/: inference_job_task.py  inference_worker.py  model_conversion_queue.py  model_conversion_task.py  paddle_inference_worker.py  paddle_worker.py  worker.py  yolo_worker.py
(+27 files in other folders)
