[project]
name = "train-platform-backend"
version = "0.1.0"
description = "Train platform backend (v2 rewrite)"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "SQLAlchemy==2.0.30",
  "alembic==1.13.1",
  "pymysql==1.1.0",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.9",
  "PyYAML==6.0.1",
  "pandas==2.2.2",
  "requests==2.32.3",
  "Pillow==10.4.0",
  "opencv-python-headless==4.9.0.80",
  "mlflow==2.15.1",
  # Training runtimes (YOLO + PaddleDetection).
  "torch==2.4.1",
  "torchvision==0.19.1",
  "ultralytics==8.4.14",
  # PaddleDetection runtime. Windows/local development uses the CPU wheel;
  # Linux x86_64 worker images can use the GPU wheel. PaddleDetection 2.6.0
  # pins numpy<1.24, so keep numpy on the latest compatible 1.23.x line.
  # Keep protobuf<=3.20.3 below for Paddle 2.6.x compatibility.
  "numpy==1.23.5",
  "paddlepaddle==2.6.2; sys_platform == 'win32' or sys_platform == 'darwin'",
  "paddlepaddle-gpu==2.6.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "paddledet==2.6.0; sys_platform == 'win32' or sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
  "pycocotools>=2.0.7; sys_platform == 'win32' or sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
  "typeguard>=2.13.3; sys_platform == 'win32' or sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
  "visualdl>=2.2.0; sys_platform == 'win32' or sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
  "lap>=0.5.12; sys_platform == 'win32' or sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
  "terminaltables>=3.1.10; sys_platform == 'win32' or sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'x86_64')",
  "cryptography>=46.0.3",
  "onnxruntime-gpu>=1.23.2",
  "onnx<=1.16.0",
  "nuitka>=2.8.10",
  "setuptools>=80.10.2",
  "wheel>=0.46.3",
  "rasterio>=1.4.4",
  "protobuf<=3.20.3",
  "numba>=0.64.0",
  "motmetrics>=1.4.0",
  "psutil>=7.2.2",
  "nvidia-ml-py>=13.595.45",
  "cython>=3.2.4",
]

[tool.uvicorn]
factory = false

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
